package ph.edu.dlsu;

public abstract class ADisplaySickness {
    protected String fileName;

    public abstract String displaySymptoms(String fileName);
}