package ph.edu.dlsu;

public class AEmotional extends ADisplaySickness {
    public String displaySymptoms (String fileName) {
        this.fileName = fileName;
        return fileName;
    }
}