package ph.edu.dlsu;

public class APhysical extends ADisplaySickness {
    public String displaySymptoms (String fileName) {
        this.fileName = fileName;
        return fileName;
    }
}