package ph.edu.dlsu;

public class IWorker {
    public String DisplayName(String name) {
        return name;
    }

    public String DisplayCompany(String company) {
        return company;
    }
}