@startuml

title __DLSU's Class Diagram__\n

  namespace ph.edu.dlsu {
    abstract class ph.edu.dlsu.ADisplaySickness {
        # fileName : String
        {abstract} + displaySymptoms()
    }
  }
  

  namespace ph.edu.dlsu {
    class ph.edu.dlsu.AEmotional {
        + displaySymptoms()
    }
  }
  

  namespace ph.edu.dlsu {
    class ph.edu.dlsu.APhysical {
        + displaySymptoms()
    }
  }
  

  namespace ph.edu.dlsu {
    class ph.edu.dlsu.CheckHistory {
        - c : Calendar
        - i : int
        - j : int
        - lastLineNum : int
        - lines : String
        - sdf : SimpleDateFormat
        - sub : String
        + checkHistory()
    }
  }
  

  namespace ph.edu.dlsu {
    class ph.edu.dlsu.IDoctor {
        + DisplayCompany()
        + DisplayName()
    }
  }
  

  namespace ph.edu.dlsu {
    class ph.edu.dlsu.IWorker {
        + DisplayCompany()
        + DisplayName()
    }
  }
  

  namespace ph.edu.dlsu {
    class ph.edu.dlsu.Main {
        ~ counter : int
        ~ date : LocalDate
        ~ dayAndTime : String
        ~ doctor : String
        ~ newDate : String
        ~ symptomsPhysical : List<Integer>
        ~ userEmail : String
        {static} + main()
        + run()
        - bookPhysical()
        - consultation()
        - delay()
        - displayIntro()
        - editPhysicalList()
        - endProgram()
        - finalizeList()
        - mental()
        - paymentPhysical()
        - pick()
        - potentialEditPhysicalList()
        - secondPickPhysical()
        - soundBGM()
        - suggestionsPhysical()
    }
  }
  

  namespace ph.edu.dlsu {
    class ph.edu.dlsu.MainCanvas {
        + Doc1()
        + Doc10()
        + Doc11()
        + Doc12()
        + Doc13()
        + Doc14()
        + Doc15()
        + Doc16()
        + Doc17()
        + Doc18()
        + Doc19()
        + Doc2()
        + Doc20()
        + Doc21()
        + Doc22()
        + Doc23()
        + Doc3()
        + Doc4()
        + Doc5()
        + Doc6()
        + Doc7()
        + Doc8()
        + Doc9()
        + canvasBDO()
        + canvasConsultation()
        + canvasCope1()
        + canvasCope2()
        + canvasGCash()
        + canvasMental1()
        + canvasMental2()
        + canvasMental3()
        + canvasNPrescription()
        + canvasPayMaya()
        + canvasPhysical1()
        + canvasPhysical2()
        + canvasPhysical3()
        + canvasPhysical4()
        + canvasPhysical5()
        + canvasPhysical6()
        + canvasPhysical7()
        + canvasPhysical8()
        + canvasPhysical9()
        + canvasS1()
        + canvasS2()
        + canvasS3()
        + canvasS4()
        + canvasS5()
        + canvasS6()
        + canvasS7()
        + canvasS8()
        + canvasS9()
        + canvasSPrescription()
        + disclaimer()
        + homescreen()
        + hotline()
        + scanning()
    }
  }
  

  namespace ph.edu.dlsu {
    class ph.edu.dlsu.PPhysical {
        - total1 : double
        - total2 : double
        - total3 : double
        + overallTotal()
        + overallTotal()
    }
  }
  

  ph.edu.dlsu.AEmotional -up-|> ph.edu.dlsu.ADisplaySickness
  ph.edu.dlsu.APhysical -up-|> ph.edu.dlsu.ADisplaySickness
  ph.edu.dlsu.IDoctor -up-|> ph.edu.dlsu.IWorker
  ph.edu.dlsu.Main -up-|> acm.program.ConsoleProgram
  ph.edu.dlsu.Main o-- ph.edu.dlsu.CheckHistory : history
  ph.edu.dlsu.Main o-- ph.edu.dlsu.MainCanvas : canvas
  ph.edu.dlsu.MainCanvas -up-|> acm.graphics.GCanvas


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
